<resources>
    <string name="app_name">PRM_Assignment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="login">Login</string>
    <string name="classes">Classes</string>
    <string name="class_name">Class Code</string>
    <string name="mentor_name">Mentor Name</string>
    <string name="student">Students</string>
    <string name="present">Present</string>
    <string name="absent">Absent</string>
    <string name="student_name">Student name</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>